Updated Golang SDK
