# api/openapi.yaml
@@ -79,6 +79,7 @@ paths:
         name: page_size
         required: false
         schema:
+          maximum: 1000
           type: integer
         style: form
       responses:
@@ -113,7 +114,26 @@ paths:
         name: page_size
         required: false
         schema:
+          maximum: 1000
           type: integer
+        style: form
+      - description: The group function to filter by.
+        example: REGULAR
+        explode: true
+        in: query
+        name: group_function_filter
+        required: false
+        schema:
+          $ref: '#/components/schemas/GroupFunctionEnum'
+        style: form
+      - description: The group type to filter by.
+        example: OPAL_GROUP
+        explode: true
+        in: query
+        name: group_type_filter
+        required: false
+        schema:
+          $ref: '#/components/schemas/GroupTypeEnum'
         style: form
       responses:
         "200":
@@ -143,6 +163,80 @@ paths:
               schema:
                 $ref: '#/components/schemas/UpdateGroupInfoList'
           description: The resulting updated group infos.
+      security:
+      - BearerAuth: []
+      tags:
+      - groups
+  /groups/{group_id}:
+    delete:
+      description: Deletes a group.
+      operationId: delete_group
+      parameters:
+      - description: The ID of the group.
+        example: 4baf8423-db0a-4037-a4cf-f79c60cb67a5
+        explode: false
+        in: path
+        name: group_id
+        required: true
+        schema:
+          format: uuid
+          type: string
+        style: simple
+      responses:
+        "200":
+          description: The group was successfully deleted.
+      security:
+      - BearerAuth: []
+      tags:
+      - groups
+  /groups/{group_id}/convert:
+    put:
+      description: Updates a groups function.
+      operationId: convert_group
+      parameters:
+      - description: The ID of the group.
+        example: 4baf8423-db0a-4037-a4cf-f79c60cb67a5
+        explode: false
+        in: path
+        name: group_id
+        required: true
+        schema:
+          format: uuid
+          type: string
+        style: simple
+      - description: The group function to convert to.
+        example: TEAM
+        explode: false
+        in: query
+        name: group_function
+        required: true
+        schema:
+          $ref: '#/components/schemas/GroupFunctionEnum'
+        style: form
+      - description: The ID of the owning team of the group. Required when converting
+          from Team to Group.
+        example: 7c86c85d-0651-43e2-a748-d69d658418e8
+        explode: false
+        in: query
+        name: owner_team_id
+        required: false
+        schema:
+          format: uuid
+          type: string
+        style: form
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/NewAdminIDList'
+        required: true
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Group'
+          description: The converted group.
       security:
       - BearerAuth: []
       tags:
@@ -274,6 +368,32 @@ paths:
       - BearerAuth: []
       tags:
       - groups
+  /groups/{group_id}/tags:
+    get:
+      description: Returns all tags applied to the group.
+      operationId: get_group_tags
+      parameters:
+      - description: The ID of the group whose tags to return.
+        example: 1b978423-db0a-4037-a4cf-f79c60cb67b3
+        explode: false
+        in: path
+        name: group_id
+        required: true
+        schema:
+          format: uuid
+          type: string
+        style: simple
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TagsList'
+          description: The tags applied to the group.
+      security:
+      - BearerAuth: []
+      tags:
+      - groups
   /resources:
     get:
       description: Returns a list of resources for your organization.
@@ -295,7 +415,17 @@ paths:
         name: page_size
         required: false
         schema:
+          maximum: 1000
           type: integer
+        style: form
+      - description: The resource type to filter by.
+        example: AWS_IAM_ROLE
+        explode: true
+        in: query
+        name: resource_type_filter
+        required: false
+        schema:
+          $ref: '#/components/schemas/ResourceTypeEnum'
         style: form
       responses:
         "200":
@@ -325,6 +455,28 @@ paths:
               schema:
                 $ref: '#/components/schemas/UpdateResourceInfoList'
           description: The resulting updated resource infos.
+      security:
+      - BearerAuth: []
+      tags:
+      - resources
+  /resources/{resource_id}:
+    delete:
+      description: Deletes a resource.
+      operationId: delete_resource
+      parameters:
+      - description: The ID of the resource.
+        example: 4baf8423-db0a-4037-a4cf-f79c60cb67a5
+        explode: false
+        in: path
+        name: resource_id
+        required: true
+        schema:
+          format: uuid
+          type: string
+        style: simple
+      responses:
+        "200":
+          description: The resource was successfully deleted.
       security:
       - BearerAuth: []
       tags:
@@ -497,6 +649,7 @@ paths:
         name: page_size
         required: false
         schema:
+          maximum: 1000
           type: integer
         style: form
       responses:
@@ -562,6 +715,7 @@ paths:
         name: page_size
         required: false
         schema:
+          maximum: 1000
           type: integer
         style: form
       responses:
@@ -571,6 +725,32 @@ paths:
               schema:
                 $ref: '#/components/schemas/ResourceUserAccessStatus'
           description: The access status reflecting the user's access to the resource.
+      security:
+      - BearerAuth: []
+      tags:
+      - resources
+  /resources/{resource_id}/tags:
+    get:
+      description: Returns all tags applied to the resource.
+      operationId: get_resource_tags
+      parameters:
+      - description: The ID of the resource whose tags to return.
+        example: 1b978423-db0a-4037-a4cf-f79c60cb67b3
+        explode: false
+        in: path
+        name: resource_id
+        required: true
+        schema:
+          format: uuid
+          type: string
+        style: simple
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TagsList'
+          description: The tags applied to the resource.
       security:
       - BearerAuth: []
       tags:
@@ -642,6 +822,32 @@ paths:
               schema:
                 $ref: '#/components/schemas/User'
           description: The user object associated with the passed-in email or ID.
+      security:
+      - BearerAuth: []
+      tags:
+      - users
+  /users/{user_id}/tags:
+    get:
+      description: Returns all tags applied to the user.
+      operationId: get_user_tags
+      parameters:
+      - description: The ID of the user whose tags to return.
+        example: 1b978423-db0a-4037-a4cf-f79c60cb67b3
+        explode: false
+        in: path
+        name: user_id
+        required: true
+        schema:
+          format: uuid
+          type: string
+        style: simple
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TagsList'
+          description: The tags applied to the user.
       security:
       - BearerAuth: []
       tags:
@@ -1364,6 +1570,10 @@ components:
           example: 7c86c85d-0651-43e2-a748-d69d658418e8
           format: uuid
           type: string
+        group_function:
+          $ref: '#/components/schemas/GroupFunctionEnum'
+        group_type:
+          $ref: '#/components/schemas/GroupTypeEnum'
         visibility:
           $ref: '#/components/schemas/VisibilityEnum'
         max_duration:
@@ -1381,6 +1591,11 @@ components:
             require a support ticket.
           example: false
           type: boolean
+        folder_id:
+          description: The ID of the folder that the group is located in.
+          example: e27cb7b0-98e2-4555-9916-9e6d8ca6b079
+          format: uuid
+          type: string
       required:
       - group_id
       type: object
@@ -1391,6 +1606,7 @@ components:
           description: This group represents Active Directory group "Payments Production
             Admin". We use this AD group to facilitate staging deployments and qualifying
             new releases.
+          name: api-group
           owner_team_id: 7c86c85d-0651-43e2-a748-d69d658418e8
           visibility: Global
           max_duration: 120
@@ -1400,6 +1616,7 @@ components:
           description: Manages the Integrations Team on-call privileged resources.
             This group is automatically synced with the on-call rotation defined in
             PagerDuty.
+          name: on-call-integrations
           owner_team_id: 4220bc12-ab8a-4b5d-be7b-f6bbcf9159f3
           visibility: Team
           max_duration: 360
@@ -1424,6 +1641,7 @@ components:
         description: This group represents Active Directory group "Payments Production
           Admin". We use this AD group to facilitate staging deployments and qualifying
           new releases.
+        name: api-group
         owner_team_id: 7c86c85d-0651-43e2-a748-d69d658418e8
         visibility: Global
         max_duration: 120
@@ -1435,6 +1653,10 @@ components:
           example: f454d283-ca87-4a8a-bdbb-df212eca5353
           format: uuid
           type: string
+        name:
+          description: The name of the group.
+          example: api-group
+          type: string
         description:
           description: A description of the group.
           example: This group represents Active Directory group "Payments Production
@@ -1443,7 +1665,7 @@ components:
           type: string
         owner_team_id:
           description: The ID of the owning team of the group. Use empty string to
-            remove owner.
+            remove owner. Required when converting from Team to Group.
           example: 7c86c85d-0651-43e2-a748-d69d658418e8
           format: uuid
           type: string
@@ -1464,9 +1686,67 @@ components:
             require a support ticket.
           example: false
           type: boolean
+        folder_id:
+          description: The ID of the folder that the group is located in.
+          example: e27cb7b0-98e2-4555-9916-9e6d8ca6b079
+          format: uuid
+          type: string
       required:
       - group_id
       type: object
+    GroupTypeEnum:
+      description: The type of the group.
+      enum:
+      - ACTIVE_DIRECTORY_GROUP
+      - DUO_GROUP
+      - GIT_HUB_TEAM
+      - GOOGLE_GROUPS_GROUP
+      - LDAP_GROUP
+      - OKTA_GROUP
+      - OPAL_GROUP
+      example: OPAL_GROUP
+      type: string
+    GroupFunctionEnum:
+      description: The function type of the group.
+      enum:
+      - REGULAR
+      - ON_CALL
+      - TEAM
+      - UNKNOWN
+      example: REGULAR
+      type: string
+    ResourceTypeEnum:
+      description: The type of the resource.
+      enum:
+      - AWS_IAM_ROLE
+      - AWS_EC2_INSTANCE
+      - AWS_EKS_CLUSTER
+      - AWS_RDS_POSTGRES_INSTANCE
+      - AWS_RDS_MYSQL_INSTANCE
+      - CUSTOM
+      - GCP_BUCKET
+      - GCP_COMPUTE_INSTANCE
+      - GCP_FOLDER
+      - GCP_GKE_CLUSTER
+      - GCP_PROJECT
+      - GCP_CLOUD_SQL_POSTGRES_INSTANCE
+      - GCP_CLOUD_SQL_MYSQL_INSTANCE
+      - GIT_HUB_REPO
+      - GOOGLE_WORKSPACE_ROLE
+      - MONGO_INSTANCE
+      - MONGO_ATLAS_INSTANCE
+      - OKTA_APP
+      - OKTA_ROLE
+      - OPAL_ROLE
+      - PAGERDUTY_ROLE
+      - SALESFORCE_PERMISSION_SET
+      - SALESFORCE_PROFILE
+      - SALESFORCE_ROLE
+      - WORKDAY_ROLE
+      - MYSQL_INSTANCE
+      - MARIADB_INSTANCE
+      example: AWS_IAM_ROLE
+      type: string
     VisibilityEnum:
       description: The visibility level of the entity.
       enum:
@@ -1526,6 +1806,20 @@ components:
           type: array
       required:
       - reviewer_ids
+      type: object
+    NewAdminIDList:
+      example:
+        admin_ids:
+        - 7870617d-e72a-47f5-a84c-693817ab4567
+        - 1520617d-e72a-47f5-a84c-693817ab48ad2
+      properties:
+        admin_ids:
+          description: The IDs of admins to set for the group if converting to a team.
+            Required when converting from Group to Team.
+          items:
+            format: uuid
+            type: string
+          type: array
       type: object
     MessageChannel:
       description: |-
@@ -1656,6 +1950,8 @@ components:
           type: string
         visibility:
           $ref: '#/components/schemas/VisibilityEnum'
+        resource_type:
+          $ref: '#/components/schemas/ResourceTypeEnum'
         max_duration:
           description: The maximum duration access to the resource can be requested
             for (in minutes).
@@ -1671,6 +1967,11 @@ components:
             require a support ticket.
           example: false
           type: boolean
+        folder_id:
+          description: The ID of the folder that the resource is located in.
+          example: e27cb7b0-98e2-4555-9916-9e6d8ca6b079
+          format: uuid
+          type: string
       required:
       - resource_id
       type: object
@@ -1678,6 +1979,7 @@ components:
       example:
         resources:
         - resource_id: f454d283-ca87-4a8a-bdbb-df212eca5353
+          name: my-mongo-db
           description: This resource represents AWS IAM role "SupportUser".
           owner_team_id: 7c86c85d-0651-43e2-a748-d69d658418e8
           visibility: Global
@@ -1685,6 +1987,7 @@ components:
           require_manager_approval: false
           require_support_ticket: false
         - resource_id: 99d0b81d-14be-4cf6-bd27-348b4af1d11b
+          name: Admin Role
           description: This resource represents GCP project "app-demo".
           owner_team_id: 4220bc12-ab8a-4b5d-be7b-f6bbcf9159f3
           visibility: Team
@@ -1707,6 +2010,7 @@ components:
         The `UpdateResourceInfo` object is used as an input to the UpdateResource API.
       example:
         resource_id: f454d283-ca87-4a8a-bdbb-df212eca5353
+        name: my-mongo-db
         description: This resource represents AWS IAM role "SupportUser".
         owner_team_id: 7c86c85d-0651-43e2-a748-d69d658418e8
         visibility: Global
@@ -1718,6 +2022,10 @@ components:
           description: The ID of the resource.
           example: f454d283-ca87-4a8a-bdbb-df212eca5353
           format: uuid
+          type: string
+        name:
+          description: The name of the resource.
+          example: my-mongo-db
           type: string
         description:
           description: A description of the resource.
@@ -1745,8 +2053,38 @@ components:
             require a support ticket.
           example: false
           type: boolean
+        folder_id:
+          description: The ID of the folder that the resource is located in.
+          example: e27cb7b0-98e2-4555-9916-9e6d8ca6b079
+          format: uuid
+          type: string
       required:
       - resource_id
+      type: object
+    TagsList:
+      example:
+        results:
+        - tag_id: f290a738-5f9f-43c2-ad67-fa31ff0eb946
+          created_at: 2022-01-23T04:56:07Z
+          updated_at: 2022-02-23T01:34:07Z
+          user_creator_id: d4a7d928-783e-4599-8ec6-088d635a5bcc
+          owner_team_id: bfb518b1-3f5b-4e3b-8eb8-3b3fabd4ea2b
+          key: database-name
+          value: redis_db
+        - tag_id: 92f0a738-5f9f-43c2-ad67-fa31ff0eb052
+          created_at: 2022-03-23T04:56:07Z
+          updated_at: 2022-04-23T01:34:07Z
+          user_creator_id: a4d7d928-783e-4599-8ec6-088d635af4ac
+          owner_team_id: gtg418b1-3f5b-4e3b-8eb8-3b3fabd4eaa1
+          key: database-type
+          value: sql
+      properties:
+        tags:
+          items:
+            $ref: '#/components/schemas/Tag'
+          type: array
+      required:
+      - tags
       type: object
     Tag:
       description: |-
